welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:2: error: java.awt.Color does not take parameters
  Color.RED()
           ^FlowerPot:7: error: java.awt.Color does not take parameters
  Color.CYAN()
            ^FlowerPot:20: error: java.awt.Color does not take parameters
  Color.ORANGE()
              ^FlowerPot:29: error: java.awt.Color does not take parameters
  Color.PINK()
            ^FlowerPot:34: error: java.awt.Color does not take parameters
  Color.GREEN()
             ^FlowerPot:55: error: not found: value color
  color.YELLOW
  ^