welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def groxFlowers() {
  Color.RED()
dessineMotif()
  avance()
  avance()
  avance()
  Color.CYAN()
  dessineMotif()
  recule()
  recule()
  recule()
  recule()
  recule()
  droite()
  avance()
  avance()
  gauche()
  avance()
  avance()
  Color.ORANGE()
  dessineMotif()
  recule()
  recule()
  recule()
  droite()
  avance()
  avance()
  gauche()
  Color.PINK()
  dessineMotif()
  avance()
  avance()
  avance()
  Color.GREEN()
  dessineMotif()
  recule()
  recule()
  recule()
  recule()
  recule()
}




def dessineMotif() {
  avance()
  avance()
  recule()
  gauche()
  avance()
  recule()
  recule()
  avance()
  color.YELLOW
  droite()
  
}